add sessiondata to existing backend services and repositories